--- a/fpca3d/DESCRIPTION
+++ b/fpca3d/DESCRIPTION
@@ -9,3 +9,4 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+Built: R 3.4.3; ; 2018-05-28 08:18:05 UTC; unix
