--- a/CNIF_0.3.0/DESCRIPTION
+++ b/CNIF_0.3.0/DESCRIPTION
@@ -1,14 +1,37 @@
 Package: CNIF2
 Type: Package
-Title: What the package does (short line)
+Title: Causal network model
 Version: 1.0
 Date: 2018-09-30
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
-LinkingTo: Rcpp, RcppArmadillo
-Depends: Rcpp (>= 0.12.18), igraph, hash, Rsymphony, rstackdeque, fda,
-        MASS, flare, corpcor
-NeedsCompilation: yes
-Packaged: 2018-09-30 10:29:35 UTC; c509
+Author: 
+        Zixin Hu <huzixin@fudan.edu.cn>, 
+        Panpan Wang, 
+        Yun Zhu, 
+        Nan Lin, 
+        Rong Jiao, 
+        Momiao Xiong<momiao.xiong@uth.tmc.edu.cn>
+Maintainer: 
+        Zixin Hu <huzixin@fudan.edu.cn>
+Description: T
+        his package allows users build a causal network/directed graphical network with the mothodology of structure equation and integer programming
+License: 
+        GPL-3
+Encoding:
+        UTF-8
+LinkingTo: 
+        Rcpp, 
+        RcppArmadillo
+Depends: 
+        Rcpp (>= 0.12.18), 
+        igraph, 
+        hash, 
+        Rsymphony, 
+        rstackdeque, 
+        fda,
+        MASS, 
+        flare, 
+        corpcor
+NeedsCompilation: 
+        yes
+Packaged: 
+        2018-09-30 10:29:35 UTC; c509
