--- a/CNIF_0.3.0/DESCRIPTION
+++ b/CNIF_0.3.0/DESCRIPTION
@@ -13,7 +13,7 @@ Author:
 Maintainer: 
         Zixin Hu <huzixin@fudan.edu.cn>
 Description: 
-        This package allows users build a causal network/directed graphical network with the mothodology of structure equation and integer programming
+        This package allows users build a causal network/directed graphical network with the framework of structure equation and integer programming
 License: 
         GPL-3
 Encoding:
