--- a/ctest/DESCRIPTION
+++ b/ctest/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: ctest
 Type: Package
-Title: What the Package Does (Title Case)
+Title: 
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: 
+Maintainer: 
+Description: 
+License: 
 Encoding: UTF-8
+Depends:descr,infotheo
 LazyData: true
