--- a/ctest/DESCRIPTION
+++ b/ctest/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: ctest
 Type: Package
-Title: 
+Title: ctest
 Version: 0.1.0
-Author: 
-Maintainer: 
-Description: 
-License: 
+Author: ctest
+Maintainer: ctest
+Description: ctest
+License: ctest
 Encoding: UTF-8
 Depends:descr,infotheo
 LazyData: true
